# ChangeLog for app-admin/logstash-forwarder
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  files/logstash-forwarder.initd:
  Fix and improve initd script.

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  logstash-forwarder-0.4.0.ebuild:
  Correct install commands for initd and confd.

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  logstash-forwarder-0.4.0.ebuild:
  Add missing eclass inheritance.

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  logstash-forwarder-0.4.0.ebuild:
  Rename initd script and confd file when installing.

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  logstash-forwarder-0.4.0.ebuild, +files/logstash-forwarder.confd,
  +files/logstash-forwarder.initd:
  Add initd script. Create user and group for logstash-forwarder.

*logstash-forwarder-0.4.0 (19 Mar 2015)

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +logstash-forwarder-0.4.0.ebuild, +metadata.xml:
  Add initial ebuild.
